<resources>
    <string name="app_name">IMApp</string>
    <string name="chats">CHATS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calls">CALLS</string>
    <string name="new_secret_chat">New Secret Chat</string>
    <string name="new_chanel">New Chanel</string>
    <string name="new_group">New Group</string>
    <string name="new_chat">New Chat</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="shared_files">Shared Files</string>
    <string name="my_files">My Files</string>
    <string name="search_hint">Search</string>
    <string name="username">Username</string>
    <string name="mobile">mobile</string>
    <string name="_0_item_selected">0 item selected</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
</resources>
