<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/fabFrame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutNewSecretChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_110sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/cvtSecretChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_secret_chat"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingRight="@dimen/cardview_horizontal_padding"
                android:paddingLeft="@dimen/cardview_horizontal_padding"
                android:paddingBottom="@dimen/cardview_vertical_padding"
                android:paddingTop="@dimen/cardview_vertical_padding"/>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreateNewSecretChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_secret_message_24dp"
            app:fabSize="mini"
            android:backgroundTint="@color/colorPrimaryText"
            app:borderWidth="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNewChanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_155sdp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/cvtChanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_chanel"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingRight="@dimen/cardview_horizontal_padding"
                android:paddingLeft="@dimen/cardview_horizontal_padding"
                android:paddingBottom="@dimen/cardview_vertical_padding"
                android:paddingTop="@dimen/cardview_vertical_padding" />
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreateNewChanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chanel_24dp"
            app:fabSize="mini"
            android:backgroundTint="@color/colorPrimaryText"
            app:borderWidth="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_200sdp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/cvtGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_group"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingRight="@dimen/cardview_horizontal_padding"
                android:paddingLeft="@dimen/cardview_horizontal_padding"
                android:paddingBottom="@dimen/cardview_vertical_padding"
                android:paddingTop="@dimen/cardview_vertical_padding" />
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreateNewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_message_24dp"
            app:fabSize="mini"
            android:backgroundTint="@color/colorPrimaryText"
            app:borderWidth="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNewChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_65sdp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/cvtChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_chat"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingRight="@dimen/cardview_horizontal_padding"
                android:paddingLeft="@dimen/cardview_horizontal_padding"
                android:paddingBottom="@dimen/cardview_vertical_padding"
                android:paddingTop="@dimen/cardview_vertical_padding" />
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreateNewChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_individual_message_24dp"
            app:fabSize="mini"
            android:backgroundTint="@color/colorPrimaryText"
            app:borderWidth="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:borderWidth="0dp"
            android:src="@drawable/ic_create_24dp"
            app:fabSize="normal" />
    </LinearLayout>

</FrameLayout>